Show Notification if new release is found