@@ -35,6 +35,10 @@
                         <option>javafx.graphics/com.sun.javafx.geom=richtextfx</option>
                         <option>--add-opens</option>
                         <option>javafx.graphics/com.sun.javafx.css=org.controlsfx.controls</option>
+                        <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls</option>
+                        <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls</option>
                     </options>
                     <mainClass>${mainClassName}</mainClass>
                 </configuration>
@@ -63,6 +67,10 @@
                                 <option>javafx.graphics/com.sun.javafx.geom=richtextfx</option>
                                 <option>--add-opens</option>
                                 <option>javafx.graphics/com.sun.javafx.css=org.controlsfx.controls</option>
+                                <option>--add-exports</option>
+                                <option>javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls</option>
+                                <option>--add-exports</option>
+                                <option>javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls</option>
                             </options>
                             <mainClass>${mainClassName}</mainClass>
                         </configuration>
@@ -157,6 +165,16 @@
             <artifactId>javafx-fxml</artifactId>
             <version>${javafxVersion}</version>
         </dependency>
+        <!--<dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>${javafxVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-web</artifactId>
+            <version>${javafxVersion}</version>
+        </dependency>-->
         <dependency>
             <groupId>com.gluonhq</groupId>
             <artifactId>equation</artifactId>
